--- a/index.html
+++ b/index.html
@@ -63,38 +63,22 @@
     <section class="banner">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-md-7">
-                    <div>
-                        <div class='me-banner'>Hello I'm</div>
-                        <h1>Diran Sai</h1>
-                        <h3>Software Developer || Problem Solver</h3>
-                        <div class="personal-info">
-                            <ul>
-                                <li>
-                                    <span><i class="material-icons">mail_outline</i></span>
-                                    <p>Diratechie@gmail.com</p>
-                                </li>
-                                <li>
-                                    <span><i class="material-icons">phone</i></span>
-                                    <p>0763047932</p>
-                                </li>
-                                <li>
-                                    <span><i class="material-icons">add_location</i></span>
-                                    <p>Lusaka, Zambia</p>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
                 <div class="col-md-5">
                     <div>
                         <img src="images/me1.jpg" alt="">
                     </div>
                 </div>
+                <div class="col-md-7">
+                    <div>
+                        <h1>Diran Sai</h1>
+                        <p>I'm a full-stack developer specialised in frontend and backend development for complex scalable web apps. I write about web development on my blog and regularly speak at various web conferences and meetups. Want to know how I may help your project? Check out my project case studies and resume.</p>
+                        <button class="btn btn-hire">Hire Me</button>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
-    
+
     <section class="about">
         <div class="container">
             <div class="row">
