--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <a class="nav-link" href="features.html">Contact</a>
                         </li>
                         <li class="nav-item me-lg-4">
-                            <a class="btn btn-primary text-white" href="features.html">Sign up</a>
+                            <a class="btn btn-primary text-white" href="features.html">Linkedln<i class="material-icons">mail_outline</i></a>
                         </li>
                     </ul>
                 </div>
@@ -71,14 +71,114 @@
                 <div class="col-md-7">
                     <div>
                         <h1>Diran Sai</h1>
-                        <p>I'm a full-stack developer specialised in frontend and backend development for complex scalable web apps. I write about web development on my blog and regularly speak at various web conferences and meetups. Want to know how I may help your project? Check out my project case studies and resume.</p>
-                        <button class="btn btn-hire">Hire Me</button>
+                        <p>I'm a full-stack developer specialised in frontend and backend development for complex
+                            scalable web apps. I write about web development on my blog and regularly speak at various
+                            web conferences and meetups. Want to know how I may help your project? Check out my project
+                            case studies and resume.</p>
+                        <button class="btn btn-hire">Hire Me<i class="material-icons">work</i></button>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
+    <section class="skills">
+        <div class="container">
+            <div class="row g-4">
+                <div class="col-md-4">
+                    <div class="card-shadow">
+                        <div class="tech-icon">
+                            <img src="images/frontend-icon.svg" alt="frontend">
+                        </div>
+                        <h4>Frontend</h4>
+                        <ul>
+                            <li>
+                                <span><i class="fas fa-check"></i></span>
+                                <span>React/Redux/Angular</span>
+                            </li>
+                            <li>
+                                <span><i class="fas fa-check"></i></span>
+                                <span>Javascript</span>
+                            </li>
+                            <li>
+                                <span><i class="fas fa-check"></i></span>
+                                <span>Webpack</span>
+                            </li>
+                            <li>
+                                <span><i class="fas fa-check"></i></span>
+                                <span>HTML/CSS/SASS/LESS</span>
+                            </li>
+                            <li>
+                                <span><i class="fas fa-check"></i></span>
+                                <span>Chart Js</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card-shadow">
+                        <div class="tech-icon">
+                            <img src="images/backend-icon.svg" alt="backend">
+                        </div>
+                        <h4>Backend</h4>
+                        <div class="tech-skils">
+                            <ul>
+                                <li>
+                                    <span><i class="fas fa-check"></i></span>
+                                    <span>Python/Django</span>
+                                </li>
+                                <li>
+                                    <span><i class="fas fa-check"></i></span>
+                                    <span>Node.js</span>
+                                </li>
+                                <li>
+                                    <span><i class="fas fa-check"></i></span>
+                                    <span>PHP</span>
+                                </li>
+                                <li>
+                                    <span><i class="fas fa-check"></i></span>
+                                    <span>PostgresSQL/MYSQL</span>
+                                </li>
+                                <li>
+                                    <span><i class="fas fa-check"></i></span>
+                                    <span>MongoDB</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card-shadow">
+                        <div class="tech-icon">
+                            <img src="images/other-skills-icon.svg" alt="other">
+                        </div>
+                        <h4>Others</h4>
+                        <ul>
+                            <li>
+                                <span><i class="fas fa-check"></i></span>
+                                <span>DevOps</span>
+                            </li>
+                            <li>
+                                <span><i class="fas fa-check"></i></span>
+                                <span>Unit Testing</span>
+                            </li>
+                            <li>
+                                <span><i class="fas fa-check"></i></span>
+                                <span>UX/Wireframing</span>
+                            </li>
+                            <li>
+                                <span><i class="fas fa-check"></i></span>
+                                <span>Sketch/Balsamiq</span>
+                            </li>
+                            <li>
+                                <span><i class="fas fa-check"></i></span>
+                                <span>Wordpress/Shopify</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="about">
         <div class="container">
             <div class="row">
