--- a/index.html
+++ b/index.html
@@ -35,22 +35,19 @@
                             <a class="nav-link" href="features.html">Home</a>
                         </li>
                         <li class="nav-item me-lg-4">
-                            <a class="nav-link" href="features.html">About</a>
+                            <a class="nav-link" href="#skills">Skills</a>
                         </li>
                         <li class="nav-item me-lg-4">
-                            <a class="nav-link" href="features.html">Skills</a>
+                            <a class="nav-link" href="#about">About</a>
                         </li>
                         <li class="nav-item me-lg-4">
-                            <a class="nav-link" href="features.html">Experience</a>
+                            <a class="nav-link" href="#services">Services</a>
                         </li>
                         <li class="nav-item me-lg-4">
-                            <a class="nav-link" href="features.html">Services</a>
+                            <a class="nav-link" href="#projects">Projects</a>
                         </li>
                         <li class="nav-item me-lg-4">
-                            <a class="nav-link" href="features.html">Projects</a>
-                        </li>
-                        <li class="nav-item me-lg-4">
-                            <a class="nav-link" href="features.html">Contact</a>
+                            <a class="nav-link" href="#contact">Contact</a>
                         </li>
                         <li class="nav-item me-lg-4">
                             <a class="btn btn-primary text-white" href="features.html">Linkedln<i class="material-icons">mail_outline</i></a>
@@ -70,7 +67,7 @@
                 </div>
                 <div class="col-md-7">
                     <div>
-                        <h1>Diran Sai</h1>
+                        <h1>Blessed Jason Mwanza</h1>
                         <p>I'm a full-stack developer specialised in frontend and backend development for complex
                             scalable web apps. I write about web development on my blog and regularly speak at various
                             web conferences and meetups. Want to know how I may help your project? Check out my project
@@ -81,7 +78,7 @@
             </div>
         </div>
     </section>
-    <section class="skills">
+    <section class="skills" id="skills">
         <div class="container">
             <div class="row g-4">
                 <div class="col-md-4">
@@ -179,7 +176,7 @@
             </div>
         </div>
     </section>
-    <section class="about">
+    <section class="about" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -204,7 +201,7 @@
             </div>
         </div>
     </section>
-    <section class="services">
+    <section class="services" id="services">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
@@ -272,7 +269,7 @@
             </div>
         </div>
     </section>
-    <section class="projects">
+    <section class="projects" id="projects">
         <div class="container">
             <div>
                 <h1>My Recent Projects</h1>
@@ -336,7 +333,7 @@
             </div>
         </div>
     </section>
-    <section class="contact">
+    <section class="contact" id="contact">
         <div class="container">
             <div class='row'>
                 <div class="col-md-6">
@@ -379,7 +376,7 @@
             </div>
         </div>
     </section>
-    <footer class="footer">
+    <footer class="footer" id="footer">
         <div class="container">
             <div class='footer-details'>
                 <div>
