--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="col-md-7">
                     <div>
-                        <h1>Blessed Jason Mwanza</h1>
+                        <h1>Diran Sai</h1>
                         <p>I'm a full-stack developer specialised in frontend and backend development for complex
                             scalable web apps. I write about web development on my blog and regularly speak at various
                             web conferences and meetups. Want to know how I may help your project? Check out my project
