--- a/index.html
+++ b/index.html
@@ -68,10 +68,7 @@
                 <div class="col-md-7">
                     <div>
                         <h1>Diran Sai</h1>
-                        <p>I'm a full-stack developer specialised in frontend and backend development for complex
-                            scalable web apps. I write about web development on my blog and regularly speak at various
-                            web conferences and meetups. Want to know how I may help your project? Check out my project
-                            case studies and resume.</p>
+                        <p>I am a self-motivated and detail-oriented professional, always striving for excellence in my work. I have a passion for learning new technologies and staying up to date with industry trends. I am adept at collaborating with cross-functional teams, communicating technical concepts effectively, and delivering high-quality code within deadlines.</p>
                         <button class="btn btn-hire">Hire Me<i class="material-icons">work</i></button>
                     </div>
                 </div>
@@ -187,12 +184,7 @@
                 <div class="col-md-6">
                     <div>
                         <h1>About Me</h1>
-                        <p>I am a keen and enthusiastic learner. With over 5 (five) years of result-oriented experience
-                            as a professional Web & software developer. I have acquired the practical skills and
-                            knowledge necessary to make any project a success. I have also built and run startups,
-                            managed teams, and run community programs - giving me a competitive edge in understanding;
-                            products, businesses, and customers. I enjoy every step of the design process, from
-                            discussion and collaboration, to deployment.</p>
+                        <p>As a MERN stack developer, I have a passion for building modern, robust, and user-friendly web applications. With several years of experience in full-stack development, I have honed my skills in each component of the MERN stack. I enjoy working closely with cross-functional teams, including designers, product managers, and other developers, to deliver high-quality applications. I am an effective communicator and believe in maintaining clear and open lines of communication to ensure the success of projects.</p>
                         <div class='resume'>
                             <button class='btn btn-outline btn-lg'>My Resume <i class="fa-solid fa-file"></i></button>
                         </div>
@@ -295,17 +287,17 @@
                     </div>
                     <div class="col-md-4 col-sm-12">
                         <div class='project'>
-                            <img src="images/project-10.png" alt="" />
+                            <img src="images/project-11.png" alt="" />
                             <div class="project-details">
-                                <h4>Finance Management</h4>
+                                <h4>Real Estate Application</h4>
                                 <div class='project-tools'>
-                                    <span>C</span>
-                                    <span>Java</span>
+                                    <span>React</span>
+                                    <span>Node</span>
                                 </div>
                                 <div class='project-controls'>
-                                    <a href='https://romantic-aryabhata-757653.netlify.app/'>Demo<i
+                                    <a href='https://real-estate-frontend-z0wx.onrender.com/#/'>Demo<i
                                             class="fa-regular fa-eye"></i></a>
-                                    <a href='https://github.com/DiranDesai/Job-Finder-1'>Source Code<i
+                                    <a href='https://github.com/DiranDesai/RealEstate-Web-Application-2023'>Source Code<i
                                             class="fa-solid -fa-code"></i></a>
                                 </div>
                             </div>
