--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <a class="nav-link" href="#contact">Contact</a>
                         </li>
                         <li class="nav-item me-lg-4">
-                            <a class="btn btn-primary text-white" href="features.html">Linkedln<i class="material-icons">mail_outline</i></a>
+                            <a class="btn btn-primary text-white" href="https://www.linkedin.com/in/diran-sai-88226619a/">Linkedln<i class="material-icons">mail_outline</i></a>
                         </li>
                     </ul>
                 </div>
@@ -186,7 +186,7 @@
                         <h1>About Me</h1>
                         <p>As a MERN stack developer, I have a passion for building modern, robust, and user-friendly web applications. With several years of experience in full-stack development, I have honed my skills in each component of the MERN stack. I enjoy working closely with cross-functional teams, including designers, product managers, and other developers, to deliver high-quality applications. I am an effective communicator and believe in maintaining clear and open lines of communication to ensure the success of projects.</p>
                         <div class='resume'>
-                            <button class='btn btn-outline btn-lg'>My Resume <i class="fa-solid fa-file"></i></button>
+                            <a href="https://www.linkedin.com/in/diran-sai-88226619a/"><button class='btn btn-outline btn-lg'>My Resume <i class="fa-solid fa-file"></i></button></a>
                         </div>
                     </div>
                 </div>
