--- a/index.html
+++ b/index.html
@@ -373,10 +373,10 @@
             <div class='footer-details'>
                 <div>
                     <ul>
-                        <li><span><a href="#"><i class="fa-brands fa-facebook"></i></a></span></li>
-                        <li><span><a href="#"><i class="fa-brands fa-twitter"></i></a></span></li>
-                        <li><span><a href="#"><i class="fa-brands fa-linkedin"></i></a></span></li>
-                        <li><span><a href="#"><i class="fa-brands fa-github"></i></a></span></li>
+                        <li><span><a href="https://www.facebook.com/diran.sai"><i class="fa-brands fa-facebook"></i></a></span></li>
+                        <li><span><a href="https://twitter.com/DiranSai12?t=O354I9ROuV2YrOtO-ReXdA&s=09"><i class="fa-brands fa-twitter"></i></a></span></li>
+                        <li><span><a href="https://www.linkedin.com/in/diran-sai-88226619a/"><i class="fa-brands fa-linkedin"></i></a></span></li>
+                        <li><span><a href="https://github.com/DiranDesai"><i class="fa-brands fa-github"></i></a></span></li>
                     </ul>
                 </div>
             </div>
