--- a/index.html
+++ b/index.html
@@ -214,8 +214,7 @@
                                     </div>
                                     <div class='col-8'>
                                         <div>
-                                            <p>Do you need someone to bring to life that beautiful UI design? I am your
-                                                guy. I give life and perfect user experience from mockups</p>
+                                            <p>As a frontend developer, my primary focus is on creating user-friendly and visually appealing web applications that deliver exceptional user experiences.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -231,9 +230,8 @@
                                     </div>
                                     <div class='col-8'>
                                         <div>
-                                            <p>If it's time to build Back-End logic; databases, data manipulation, and
-                                                building API's, You're in the right place. I build APIs, integrate
-                                                payments systems and more...</p>
+                                            <p>
+                                                Maintaining robust server-side applications, databases and APIs that power modern web and mobile applications.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -249,8 +247,7 @@
                                     </div>
                                     <div class='col-8'>
                                         <div>
-                                            <p>Taking a practical approach - I build, deploy, and maintain fully fledged
-                                                desktop software and web applications from scratch :-)</p>
+                                            <p>As a Full Stack Developer, I possess a comprehensive understanding of both front-end and back-end technologies</p>
                                         </div>
                                     </div>
                                 </div>
