--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <div class="col-md-8">
                     <div class='services-details row g-4'>
                         <div class='col-12'>
-                            <div class='service-inner'>
+                            <div class='service-inner front-end'>
                                 <div class='row'>
                                     <div class='col-4'>
                                         <div>
@@ -221,7 +221,7 @@
                             </div>
                         </div>
                         <div class='col-12'>
-                            <div class='service-inner'>
+                            <div class='service-inner back-end'>
                                 <div class='row'>
                                     <div class='col-4'>
                                         <div>
@@ -238,11 +238,11 @@
                             </div>
                         </div>
                         <div class='col-12'>
-                            <div class='service-inner'>
+                            <div class='service-inner full-stack'>
                                 <div class='row'>
                                     <div class='col-4'>
                                         <div>
-                                            <h4>Full-Stalk</h4>
+                                            <h4>Full-Stack</h4>
                                         </div>
                                     </div>
                                     <div class='col-8'>
