change movie project image

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                     </div>
                     <div class="col-md-4 col-sm-12">
                         <div class='project'>
-                            <img src="images/project-8.png" alt="" />
+                            <img src="images/movie.png" alt="" />
                             <div class="project-details">
                                 <h4>Movie Web App</h4>
                                 <div class='project-tools'>
