--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="row align-items-center">
                 <div class="col-md-5">
                     <div>
-                        <img src="images/me1.jpg" alt="">
+                        <img src="images/default2.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-md-7">
