--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="collapse navbar-collapse py-3 py-lg-0" id="navigation">
                     <ul class="navbar-nav ms-lg-auto">
                         <li class="nav-item me-lg-4">
-                            <a class="nav-link" href="features.html">Home</a>
+                            <a class="nav-link" href="/">Home</a>
                         </li>
                         <li class="nav-item me-lg-4">
                             <a class="nav-link" href="#skills">Skills</a>
@@ -379,6 +379,9 @@
             </div>
         </div>
     </footer>
+    <div class="loader-overlay">
+        <div class="loader"></div>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
