--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <a class="nav-link" href="#contact">Contact</a>
                         </li>
                         <li class="nav-item me-lg-4">
-                            <a class="btn btn-primary text-white" href="https://www.linkedin.com/in/diran-sai-88226619a/">Linkedln<i class="material-icons">mail_outline</i></a>
+                            <a class="btn btn-primary text-white linkden" href="https://www.linkedin.com/in/diran-sai-88226619a/">Linkedln<i class="material-icons">mail_outline</i></a>
                         </li>
                     </ul>
                 </div>
@@ -62,7 +62,7 @@
             <div class="row align-items-center">
                 <div class="col-md-5">
                     <div>
-                        <img src="images/default2.jpg" alt="">
+                        <img src="images/default.jfif" alt="" class="my-image">
                     </div>
                 </div>
                 <div class="col-md-7">
