--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="container">
             <div class="row g-4">
                 <div class="col-md-4">
-                    <div class="card-shadow">
+                    <div class="card-shadow skill">
                         <div class="tech-icon">
                             <img src="images/frontend-icon.svg" alt="frontend">
                         </div>
@@ -109,7 +109,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card-shadow">
+                    <div class="card-shadow skill">
                         <div class="tech-icon">
                             <img src="images/backend-icon.svg" alt="backend">
                         </div>
@@ -141,7 +141,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card-shadow">
+                    <div class="card-shadow skill">
                         <div class="tech-icon">
                             <img src="images/other-skills-icon.svg" alt="other">
                         </div>
