--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
                 <div class="collapse navbar-collapse py-3 py-lg-0" id="navigation">
                     <ul class="navbar-nav ms-lg-auto">
                         <li class="nav-item me-lg-4">
-                            <a class="nav-link" href="/">Home</a>
+                            <a class="nav-link" href="/">Products</a>
                         </li>
                         <li class="nav-item me-lg-4">
                             <a class="nav-link" href="#skills">Skills</a>
                         </li>
                         <li class="nav-item me-lg-4">
-                            <a class="nav-link" href="#about">About</a>
+                            <a class="nav-link" href="#about">Marketing</a>
                         </li>
                         <li class="nav-item me-lg-4">
-                            <a class="nav-link" href="#services">Services</a>
+                            <a class="nav-link" href="#services">Categories</a>
                         </li>
                         <li class="nav-item me-lg-4">
-                            <a class="nav-link" href="#projects">Projects</a>
+                            <a class="nav-link" href="#projects">Community</a>
                         </li>
                         <li class="nav-item me-lg-4">
-                            <a class="nav-link" href="#contact">Contact</a>
+                            <a class="nav-link" href="#contact">Advertising</a>
                         </li>
                         <li class="nav-item me-lg-4">
                             <a class="btn btn-primary text-white linkden" href="https://www.linkedin.com/in/diran-sai-88226619a/">Linkedln<i class="material-icons">mail_outline</i></a>
@@ -83,7 +83,7 @@
                         <div class="tech-icon">
                             <img src="images/frontend-icon.svg" alt="frontend">
                         </div>
-                        <h4>Frontend</h4>
+                        <h4>Frontend Development</h4>
                         <ul>
                             <li>
                                 <span><i class="fas fa-check"></i></span>
@@ -113,7 +113,7 @@
                         <div class="tech-icon">
                             <img src="images/backend-icon.svg" alt="backend">
                         </div>
-                        <h4>Backend</h4>
+                        <h4>Server Side Logic</h4>
                         <div class="tech-skils">
                             <ul>
                                 <li>
@@ -145,7 +145,7 @@
                         <div class="tech-icon">
                             <img src="images/other-skills-icon.svg" alt="other">
                         </div>
-                        <h4>Others</h4>
+                        <h4>Other Tools</h4>
                         <ul>
                             <li>
                                 <span><i class="fas fa-check"></i></span>
@@ -209,7 +209,7 @@
                                 <div class='row'>
                                     <div class='col-4'>
                                         <div>
-                                            <h4>Front-End</h4>
+                                            <h4>Designing & Coding</h4>
                                         </div>
                                     </div>
                                     <div class='col-8'>
@@ -225,7 +225,7 @@
                                 <div class='row'>
                                     <div class='col-4'>
                                         <div>
-                                            <h4>Back-End</h4>
+                                            <h4>Server Side & Logic</h4>
                                         </div>
                                     </div>
                                     <div class='col-8'>
@@ -242,7 +242,7 @@
                                 <div class='row'>
                                     <div class='col-4'>
                                         <div>
-                                            <h4>Full-Stack</h4>
+                                            <h4>Robust Application</h4>
                                         </div>
                                     </div>
                                     <div class='col-8'>
@@ -261,8 +261,8 @@
     <section class="projects" id="projects">
         <div class="container">
             <div>
-                <h1>My Recent Projects</h1>
-                <div class="row g-4">
+                <h1>Personal Projects</h1>
+                <div class="row g-4 mt-2">
                     <div class="col-md-4 col-sm-12">
                         <div class='project'>
                             <img src="images/project-7.png" alt="" />
@@ -327,7 +327,7 @@
             <div class='row'>
                 <div class="col-md-6">
                     <div>
-                        <h1>Let's Discuss Project</h1>
+                        <h1>Awesome Ideas</h1>
                         <div class='form-container'>
                             <form>
                                 <div class="form-group row">
