--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                 </div>
                 <div class="col-md-7">
                     <div class="banner-content">
-                        <h1>Diran Sai</h1>
+                        <h1>Diran Sai 🤓</h1>
                         <p>I am a self-motivated and detail-oriented professional, always striving for excellence in my work. I have a passion for learning new technologies and staying up to date with industry trends. I am adept at collaborating with cross-functional teams, communicating technical concepts effectively, and delivering high-quality code within deadlines.</p>
-                        <button class="btn btn-hire">Hire Me<i class="material-icons">work</i></button>
+                        <button class="btn btn-hire">My Works<i class="material-icons">work</i></button>
                     </div>
                 </div>
             </div>
@@ -183,7 +183,7 @@
                 </div>
                 <div class="col-md-6">
                     <div>
-                        <h1>About Me</h1>
+                        <h1>Technical Background 🤝🏻</h1>
                         <p>As a MERN stack developer, I have a passion for building modern, robust, and user-friendly web applications. With several years of experience in full-stack development, I have honed my skills in each component of the MERN stack. I enjoy working closely with cross-functional teams, including designers, product managers, and other developers, to deliver high-quality applications. I am an effective communicator and believe in maintaining clear and open lines of communication to ensure the success of projects.</p>
                         <div class='resume'>
                             <a href="https://docs.google.com/document/d/1QzhbNZgdurtNgll8rOTHPA1lnsaYHGJTfUQlkww-lH4/edit?usp=drive_link"><button class='btn btn-outline btn-lg'>My Resume <i class="fa-solid fa-file"></i></button></a>
@@ -198,7 +198,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div>
-                        <h1>Services I Distribute</h1>
+                        <h1>Services I Distribute 👉</h1>
                         <img src="images/ab-img.png" alt="" />
                     </div>
                 </div>
@@ -261,7 +261,7 @@
     <section class="projects" id="projects">
         <div class="container">
             <div>
-                <h1>Personal Projects</h1>
+                <h1>Personal Projects 👇</h1>
                 <div class="row g-4 mt-2">
                     <div class="col-md-4 col-sm-12">
                         <div class='project'>
@@ -327,7 +327,7 @@
             <div class='row'>
                 <div class="col-md-6">
                     <div>
-                        <h1>Awesome Ideas</h1>
+                        <h1>Awesome Ideas 😁</h1>
                         <div class='form-container'>
                             <form>
                                 <div class="form-group row">
