--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <section class="banner">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-md-5">
+                <div class="col-md-5 img-container">
                     <div>
                         <img src="images/default.jfif" alt="" class="my-image">
                     </div>
