--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="col-md-7">
                     <div class="banner-content">
-                        <h1>Diran Sai 🤓</h1>
+                        <h1>Diran Sai ✋</h1>
                         <p>I am a self-motivated and detail-oriented professional, always striving for excellence in my work. I have a passion for learning new technologies and staying up to date with industry trends. I am adept at collaborating with cross-functional teams, communicating technical concepts effectively, and delivering high-quality code within deadlines.</p>
                         <button class="btn btn-hire">My Works<i class="material-icons">work</i></button>
                     </div>
